--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@types/jest": "^26.0.9",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/testing-library__jest-dom": "^5.9.2",
     "@types/testing-library__react": "^10.2.0",
     "cra-template-typescript": "1.0.3",
