--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.34",
+    "@emotion/styled": "^10.0.27",
     "@reduxjs/toolkit": "^1.4.0",
     "@types/jest": "^26.0.9",
     "@types/react": "^16.9.46",
@@ -11,11 +13,13 @@
     "@types/testing-library__jest-dom": "^5.9.2",
     "@types/testing-library__react": "^10.2.0",
     "cra-template-typescript": "1.0.3",
+    "emotion-theming": "^10.0.27",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux-saga": "^1.1.3",
+    "styled-system": "^5.1.5",
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
   },
